--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="right hide-on-med-and-down">
                 <li><a href="/">Начало</a></li>
                 <li><a href="https://github.com/neostarbg">GitHub</a></li>
-                <li><a href="/notes">Записки</a></li>
+                <!-- <li><a href="/notes">Записки</a></li> -->
             </ul>
         </div>
     </nav>
