remove notes link on mobile too

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <ul class="sidenav" id="mobile-nav">
         <li><a href="/">Начало</a></li>
         <li><a href="https://github.com/neostarbg">GitHub</a></li>
-        <li><a href="/notes">Записки</a></li>
+        <!-- <li><a href="/notes">Записки</a></li> -->
     </ul>
     <div id="wrapper-outer">
         <div id="wrapper-inner">
