--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
     </div>
     <footer>
-      peshka.ml v2.0.6
+      peshka.ml v2.0.7
     </footer>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
@@ -172,5 +172,10 @@
         $("#" + $(e.target).attr("for")).prop("checked", true);
       });
     </script>
+
+    <!-- Analytics -->
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101169489);</script>
+    <script async src="//static.getclicky.com/js"></script>
+
   </body>
 </html>
