--- a/lekcii/index.html
+++ b/lekcii/index.html
@@ -96,52 +96,18 @@
     </ul>
     <div id="wrapper-outer">
       <div id="wrapper-inner">
-        <h3>График на занятията</h3>
-        <h5>Софтуерно инженерство 4 семестър</h5>
-
-        <button class="btn grey darken-4 filter-btn">
-          Филтри <i class="material-icons right">arrow_drop_down</i>
-        </button>
-
-        <div class="filters">
-          <form action="#">
-            <div class="row">
-              <!-- Group dropdown-->
-              <div class="col s12 m3">
-                <select name="group" id="group" class="browser-default">
-                  <option value="0">Всички групи</option>
-                  <option value="1">1 Група</option>
-                  <option value="2">2 Група</option>
-                  <option value="3">3 Група</option>
-                  <option value="4" selected>4 Група</option>
-                </select>
-              </div>
-
-              <!-- Search bar -->
-              <div class="col s12 m3 input-field">
-                <input type="text" name="search" id="search" />
-                <label for="search">Търсене</label>
-              </div>
+        <div class="card grey darken-4">
+          <div class="card-content">
+            <div class="card-title">
+              <h1>Лекции</h1>
             </div>
-          </form>
+
+            <h3>4 семестър</h3>
+            <ul>
+              <li><a href="/lekcii/algo/">Алгоритми и структури от данни</a></li>
+            </ul>
+          </div>
         </div>
-
-        <table>
-          <thead>
-            <tr>
-              <th>Ден</th>
-              <th>Час</th>
-              <th>Седмица</th>
-              <th>Група</th>
-              <th>Зала</th>
-              <th>Л/У</th>
-              <th>Дисциплина</th>
-              <th>Преподавател</th>
-            </tr>
-          </thead>
-
-          <tbody></tbody>
-        </table>
       </div>
     </div>
     <footer>
@@ -153,19 +119,6 @@
     <script src="js/app.js"></script>
 
     <script>
-      $(document).ready(function() {
-        $(".sidenav").sidenav(); //Initialize the sidenav on mobile
-        $("select").formSelect(); //Initialize the select input
-
-        particlesJS.load("particles", "/js/particlesjs-config.json", () => {}); //Initialize particles.js
-
-        if (!filtersVisible) {
-          $(".filters").css("display", "none"); //Hide the .filters div if filtersVisible is set to false
-        }
-
-        loadSchedule(); //Load the schedule from a separate file
-      });
-
       $(".dropdown-el").click(function(e) {
         e.preventDefault();
         e.stopPropagation();
