--- a/lekcii/algo/index.html
+++ b/lekcii/algo/index.html
@@ -130,7 +130,7 @@
                 <li><a href='files/Conspect.doc' download>Conspect.doc <i class='fas fa-file-word'></i></a></li>
                 <li><a href='files/files.doc' download>files.doc <i class='fas fa-file-word'></i></a></li>
                 <li><a href='files/graphs.txt' download>graphs.txt <i class='fas fa-file-alt'></i></a></li>
-                <li><a href='files/Linear Data structures - C#.ppt'>Linear Data structures - C#.ppt <i class='fas fa-file-powerpoint'></i></a></li>
+                <li><a href='files/Linear Data structures - C.ppt'>Linear Data structures - C#.ppt <i class='fas fa-file-powerpoint'></i></a></li>
                 <li><a href='files/Prim.doc' download>Prim.doc <i class='fas fa-file-word'></i></a></li>
                 <li><a href='files/Trees C#.txt' download>Trees C#.txt <i class='fas fa-file-alt'></i></a></li>
             </ul>
