--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
     <ul class="sidenav" id="mobile-nav">
       <li><a href="/">Начало</a></li>
+      <li><a href="/lekcii/">Лекции</a></li>
       <li><a href="https://github.com/neostarbg">GitHub</a></li>
       <!-- <li><a href="/notes">Записки</a></li> -->
     </ul>
