--- a/lekcii/algo/index.html
+++ b/lekcii/algo/index.html
@@ -99,6 +99,7 @@
 
     <ul class="sidenav" id="mobile-nav">
       <li><a href="/">Начало</a></li>
+      <li><a href="/lekcii/">Лекции</a></li>
       <li><a href="https://github.com/neostarbg">GitHub</a></li>
       <!-- <li><a href="/notes">Записки</a></li> -->
     </ul>
@@ -141,12 +142,13 @@
     <footer>
       peshka.ml v2.0.7
     </footer>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script src="js/particles.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/materialize.min.js"></script>
+    <script src="/js/particles.min.js"></script>
+    <script src="/js/app.js"></script>
 
     <script>
+      $(".sidenav").sidenav();
       $(".dropdown-el").click(function(e) {
         e.preventDefault();
         e.stopPropagation();
