--- a/lekcii/index.html
+++ b/lekcii/index.html
@@ -120,10 +120,10 @@
     <footer>
       peshka.ml v2.0.7
     </footer>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script src="js/particles.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/materialize.min.js"></script>
+    <script src="/js/particles.min.js"></script>
+    <script src="/js/app.js"></script>
 
     <script>
       $(".sidenav").sidenav();
