add some shortened lectures

--- a/lekcii/algo/index.html
+++ b/lekcii/algo/index.html
@@ -71,6 +71,7 @@
       }
 
       .fas {color: white}
+      .small { font-size: 0.8em; }
     </style>
     <title>Програма 4 семестър</title>
   </head>
@@ -113,10 +114,17 @@
 
             <h4>Лекции</h4>
             <ul>
-              <li><a href="files/l2-algorithms.pdf" target="_blank">Лекция 2 - Алгоритми, сложност <i class="fas fa-file-pdf"></i></a></li>
-              <li><a href="files/l3-search.pdf" target="_blank">Лекция 3 - Търсене <i class="fas fa-file-pdf"></i></a></li>
-              <li><a href="files/l4-sorting.pdf" target="_blank">Лекция 4 - Сортиране <i class="fas fa-file-pdf"></i></a></li>
-              <li><a href="files/l5-heap.pdf" target="_blank">Лекция 5 - Heap <i class="fas fa-file-pdf"></i></a></li>
+              <li><a href="files/l2-algorithms.pdf" target="_blank">Лекция 2 - Алгоритми, сложност <i class="fas fa-file-pdf"></i></a>
+                 (<a target="_blank" href="files/2_slojnost.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)</li>
+              <li><a href="files/l3-search.pdf" target="_blank">Лекция 3 - Търсене <i class="fas fa-file-pdf"></i></a>
+                (<a target="_blank" href="files/3_search.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)
+              </li>
+              <li><a href="files/l4-sorting.pdf" target="_blank">Лекция 4 - Сортиране <i class="fas fa-file-pdf"></i></a>
+                (<a target="_blank" href="files/4_sort.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)
+              </li>
+              <li><a href="files/l5-heap.pdf" target="_blank">Лекция 5 - Пирамидално сортиране <i class="fas fa-file-pdf"></i></a>
+                (<a target="_blank" href="files/5_heap.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)
+              </li>
               <li><a href="files/l6-recursion.pdf" target="_blank">Лекция 6 - Рекурсия <i class="fas fa-file-pdf"></i></li>
               <li><a href="files/L7-QUICKSORT.pdf" target="_blank">Лекция 7 - QuickSort <i class="fas fa-file-pdf"></i></a></li>
               <li><a href="files/L7-QUICKSORT.ppt" download>Лекция 7 - QuickSort  <i class='fas fa-file-powerpoint'></i></a></li>
