add math 2 lectures

--- a/lekcii/anal/index.html
+++ b/lekcii/anal/index.html
@@ -73,7 +73,7 @@
       .fas {color: white}
       .small { font-size: 0.8em; }
     </style>
-    <title>Лекции по алгоритми и структури от данни</title>
+    <title>Теми по мат. анал. №2</title>
   </head>
   <body>
     <div id="particles"></div>
@@ -109,39 +109,26 @@
         <div class="card grey darken-4">
           <div class="card-content">
             <div class="card-title">
-              <h1>Алгоритми и структури от данни</h1>
+              <h1>Математически анализ 2</h1>
             </div>
 
-            <h4>Лекции</h4>
+            <h4>Теми</h4>
             <ul>
-              <li><a href="files/l2-algorithms.pdf" target="_blank">Лекция 2 - Алгоритми, сложност <i class="fas fa-file-pdf"></i></a>
-                 (<a target="_blank" href="files/2_slojnost.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)</li>
-              <li><a href="files/l3-search.pdf" target="_blank">Лекция 3 - Търсене <i class="fas fa-file-pdf"></i></a>
-                (<a target="_blank" href="files/3_search.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)
-              </li>
-              <li><a href="files/l4-sorting.pdf" target="_blank">Лекция 4 - Сортиране <i class="fas fa-file-pdf"></i></a>
-                (<a target="_blank" href="files/4_sort.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)
-              </li>
-              <li><a href="files/l5-heap.pdf" target="_blank">Лекция 5 - Пирамидално сортиране <i class="fas fa-file-pdf"></i></a>
-                (<a target="_blank" href="files/5_heap.pdf" class="small">Съкратен вариант</a> <i class="fas fa-file-pdf"></i>)
-              </li>
-              <li><a href="files/l6-recursion.pdf" target="_blank">Лекция 6 - Рекурсия <i class="fas fa-file-pdf"></i></li>
-              <li><a href="files/L7-QUICKSORT.pdf" target="_blank">Лекция 7 - QuickSort <i class="fas fa-file-pdf"></i></a></li>
-              <li><a href="files/L7-QUICKSORT.ppt" download>Лекция 7 - QuickSort  <i class='fas fa-file-powerpoint'></i></a></li>
-              <li><a href="files/L8-AbstSD.pdf" target="_blank">Лекция 8 - Абстрактни структури от данни. Тип Структура <i class="fas fa-file-pdf"></i></a></li>
-              <li><a href="files/L8-AbstSD.ppt" download>Лекция 8 - Абстрактни структури от данни. Тип Структура <i class="fas fa-file-powerpoint"></i></a></li>
-              <li><a href="files/L9-Lists.ppt" download>Лекция 9 - Списъци <i class="fas fa-file-powerpoint"></i></a></li>
-            </ul>
-
-            <h4>Други файлове</h4>
-            <ul>
-                <li><a href='files/Chapter-14.1-Linear-Data-Structures-v.0.9.doc' download>Chapter-14.1-Linear-Data-Structures-v.0.9.doc <i class='fas fa-file-word'></i></a></li>
-                <li><a href='files/Conspect.doc' download>Conspect.doc <i class='fas fa-file-word'></i></a></li>
-                <li><a href='files/files.doc' download>files.doc <i class='fas fa-file-word'></i></a></li>
-                <li><a href='files/graphs.txt' download>graphs.txt <i class='fas fa-file-alt'></i></a></li>
-                <li><a href='files/Linear Data structures - C.ppt'>Linear Data structures - C#.ppt <i class='fas fa-file-powerpoint'></i></a></li>
-                <li><a href='files/Prim.doc' download>Prim.doc <i class='fas fa-file-word'></i></a></li>
-                <li><a href='files/Trees.txt' download>Trees C#.txt <i class='fas fa-file-alt'></i></a></li>
+              <li><a href="files/1.pdf" target="_blank">1. Метрика в Rⁿ.  Отворени и затворени множества в Rⁿ <i class="fas fa-file-pdf"></i></a></li>
+              <li><a href="files/2_1.pdf" target="_blank">2.1 Компактни множества  в Rⁿ <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/3.pdf" target="_blank">Функции на няколко променливи. Граници. Непрекъснатост <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/4,5.pdf" target="_blank">4 и 5. Частни производни. Диференцируемост. | Производни от по-висок ред. Теорема за смесените производни <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/6.pdf" target="_blank">6. Формула на Тейлор за функция на няколко променливи <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/7.pdf" target="_blank">7. Локални екстремуми на функция на няколко променливи <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/8.pdf" target="_blank">8. Теорема за неявната функция <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/9.pdf" target="_blank">9. Условни екстремуми. Множители на Лагранж <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/10-11.pdf" target="_blank">10 (и 11 може би). Смяна на променливите при кратен интеграл <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/10-dvoini.pdf" target="_blank" class="small">10.1 (май не е това което трябва ама го оставям) Смяна на променливите при двойни интеграли <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/10-opredeleni.pdf" target="_blank" class="small">10.2 (пак май не е това) Смяна на променливите при определени интеграли <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/12.pdf" target="_blank">12. Криволинейни интеграли от първи род <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/13.pdf" target="_blank">13. Криволинейни интеграли от втори род <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/14-1.pdf" target="_blank">14.1 Нeзависимост на криволинейния интеграл от пътя на интегриране <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/14-2.pdf" target="_blank">14.2 Формула на Грийн <i class="fas fa-file-pdf"></i></a></li> 
             </ul>
           </div>
         </div>
