--- a/lekcii/index.html
+++ b/lekcii/index.html
@@ -64,7 +64,7 @@
     <link rel="stylesheet" href="/css/materialize.min.css" />
     <link rel="stylesheet" href="/css/dark.css" id="siteTheme" />
     <script></script>
-    <title>Програма 4 семестър</title>
+    <title>Лекции и теми за изпити</title>
     <style>
       ul a {
         color: #ccf; 
@@ -106,11 +106,12 @@
         <div class="card grey darken-4">
           <div class="card-content">
             <div class="card-title">
-              <h1>Лекции</h1>
+              <h1>Лекции и теми</h1>
             </div>
 
             <h3>4 семестър</h3>
             <ul>
+              <li><a href="/lekcii/anal/">📐Математически анализ 2</a></li>
               <li><a href="/lekcii/algo/">🖥 Алгоритми и структури от данни</a></li>
             </ul>
           </div>
