--- a/lekcii/anal/index.html
+++ b/lekcii/anal/index.html
@@ -116,7 +116,7 @@
             <ul>
               <li><a href="files/1.pdf" target="_blank">1. Метрика в Rⁿ.  Отворени и затворени множества в Rⁿ <i class="fas fa-file-pdf"></i></a></li>
               <li><a href="files/2_1.pdf" target="_blank">2.1 Компактни множества  в Rⁿ <i class="fas fa-file-pdf"></i></a></li> 
-              <li><a href="files/3.pdf" target="_blank">Функции на няколко променливи. Граници. Непрекъснатост <i class="fas fa-file-pdf"></i></a></li> 
+              <li><a href="files/3.pdf" target="_blank">3. Функции на няколко променливи. Граници. Непрекъснатост <i class="fas fa-file-pdf"></i></a></li> 
               <li><a href="files/4,5.pdf" target="_blank">4 и 5. Частни производни. Диференцируемост. | Производни от по-висок ред. Теорема за смесените производни <i class="fas fa-file-pdf"></i></a></li> 
               <li><a href="files/6.pdf" target="_blank">6. Формула на Тейлор за функция на няколко променливи <i class="fas fa-file-pdf"></i></a></li> 
               <li><a href="files/7.pdf" target="_blank">7. Локални екстремуми на функция на няколко променливи <i class="fas fa-file-pdf"></i></a></li> 
